--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -132,7 +132,7 @@ spec:
     spec:
       containers:
         - name: prometheus-service
-          image: keptncontrib/prometheus-service:0.5.0
+          image: imrajdas/prometheus-service:ci
           ports:
             - containerPort: 8080
           resources:
